name: Nomyx
version: 0.4.0
cabal-version: >=1.6
build-type: Simple
license: BSD3
license-file: LICENSE
maintainer: corentin.dupont@gmail.com
synopsis: A Nomic game in haskell
description: A Nomic game in Haskell, with a dedicated language to create new rules.
             .
             Nomyx is a fabulous and strange game where you have the right to change the rules in the middle of the game!
             Indeed, changing the rules is the goal of the game. Changing a rule is considered as a move. Of course even that could be changed! The original (paper) game: www.nomic.net
category: game
Homepage: http://www.nomyx.net
author: Corentin Dupont
data-files: static/css/nomyx.css 
            static/nomyx.js
            static/pictures/*.jpg
data-dir: data
extra-source-files: AUTHORS README TODO
 
executable Nomyx
    build-depends: Nomyx-Language         == 0.4.0,
                   DebugTraceHelpers      == 0.12.*,
                   MissingH               == 1.2.*,
                   MonadCatchIO-mtl       == 0.3.*,
                   acid-state             == 0.10.*,
                   base                   == 4.6.*,
                   blaze-html             == 0.5.*,
                   blaze-markup           == 0.5.*,
                   bytestring             == 0.10.*,
                   containers             == 0.5.*,
                   data-lens              == 2.10.*,
                   data-lens-template     == 2.1.*,
                   data-lens-fd           == 2.0.*,
                   directory              == 1.2.*,
                   either-unwrap          == 1.1.*,
                   fb                     == 0.14.*,
                   filepath               == 1.3.*,
                   happstack-authenticate == 0.10.*,
                   happstack-server       == 7.1.*,
                   hint                   == 0.3.*,
                   hint-server            == 1.2.*,
                   hscolour               == 1.20.*,
                   ixset                  == 1.0.*,
                   mime-mail              == 0.4.*,
                   mtl                    == 2.1.*,
                   network                == 2.4.*,
                   old-locale             == 1.0.*,
                   reform                 == 0.1.*,
                   reform-blaze           == 0.1.*,
                   reform-happstack       == 0.1.*,
                   safe                   == 0.3.*,
                   safecopy               == 0.8.*,
                   split                  == 0.2.*,
                   stm                    == 2.4.*,
                   tar                    == 0.4.*,
                   temporary              == 1.1.*,
                   template-haskell       == 2.8.*,
                   text                   == 0.11.*,
                   time                   == 1.4.*,
                   -- cross-platform file handling
                   unix-compat            == 0.4.*,
                   web-routes             == 0.27.*,
                   web-routes-happstack   == 0.23.*,
                   web-routes-regular     == 0.19.*,
                   web-routes-th          == 0.22.*
                  
    if os(windows)
        Cpp-options: -DWINDOWS
    else
        build-depends: unix == 2.6.*

    main-is: Main.hs
    buildable: True
    extensions: CPP
    hs-source-dirs: src
    other-modules: Types Mail Test Multi Serialize Utils Interpret
                   Quotes Web.Common Web.Help Web.NewGame Web.Game Web.Login
                   Web.Settings Web.MainPage
    ghc-options: -W -threaded
 
