name: Nomyx
version: 0.4.1
cabal-version: >=1.6
build-type: Simple
license: BSD3
license-file: LICENSE
maintainer: corentin.dupont@gmail.com
synopsis: A Nomic game in haskell
description: A Nomic game in Haskell, with a dedicated language to create new rules.
             .
             Nomyx is a fabulous and strange game where you have the right to change the rules in the middle of the game!
             Indeed, changing the rules is the goal of the game. Changing a rule is considered as a move. Of course even that could be changed! The original (paper) game: www.nomic.net
category: game
Homepage: http://www.nomyx.net
author: Corentin Dupont
data-files: test/*.hs
            test/more/*.hs
data-dir: data
extra-source-files: AUTHORS README TODO
 
executable Nomyx
    build-depends: Nomyx-Core             == 0.4.1,
                   Nomyx-Language         == 0.4.1, 
                   Nomyx-Web              == 0.4.1,
                   DebugTraceHelpers      == 0.12.*,
                   acid-state             == 0.12.*,
                   base                   == 4.6.*,
                   bytestring             == 0.10.*,
                   containers             == 0.5.*,
                   data-lens              == 2.10.*,
                   data-lens-template     == 2.1.*,
                   data-lens-fd           == 2.0.*,
                   directory              == 1.2.*,
                   exceptions             == 0.3.*,
                   filepath               == 1.3.*,
                   happstack-authenticate == 0.10.*,
                   hint-server            == 1.3.*,
                   mtl                    == 2.1.*,
                   network                == 2.4.*,
                   old-locale             == 1.0.*,
                   safe                   == 0.3.*,
                   stm                    == 2.4.*,
                   template-haskell       == 2.8.*,                   
                   temporary              == 1.1.*,
                   text                   == 1.1.*,
                   time                   == 1.4.*,
                   unix-compat            == 0.4.*
    if os(windows)
        Cpp-options: -DWINDOWS
    else
        build-depends: unix == 2.6.*
    main-is: Main.hs
    buildable: True
    extensions: CPP
    hs-source-dirs: src
    other-modules: Main 
                   Test
    ghc-options: -W -threaded
 
source-repository head
  type:              git
  location:          git://github.com/cdupont/Nomyx.git
