name: Imprevu-Happstack
version: 0.7.6
cabal-version: >=1.8
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: 2016 Corentin Dupont
maintainer: Corentin Dupont
stability: Experimental
synopsis: Imprevu support for Happstack
description:
category: Language
Homepage: http://www.nomyx.net
author: Corentin Dupont
data-files:
data-dir: ""
extra-source-files: AUTHORS README

library
    build-depends: DebugTraceHelpers  == 0.12.*,
                   Imprevu -any,
                   base               >= 4.6 && < 5,
                   containers         == 0.5.*,
                   lens               >= 4.7 && < 4.14,
                   ghc                >= 7.6 && < 7.11,
                   mtl                >= 2.1 && < 2.3,
                   old-locale         == 1.0.*,
                   blaze-html             >= 0.7 && < 0.9,
                   happstack-server       >= 7.3 && < 7.5,
                   reform                 == 0.2.*,
                   reform-blaze           == 0.2.*,
                   reform-happstack       == 0.2.*,
                   text                   >= 1.1 && < 1.3,
                   monad-extras -any,
                   stm,
                   safe,
                   HTTP,
                   NoTrace
    exposed-modules: Imprevu.Happstack.Forms
                     Imprevu.Happstack.Types
                     Imprevu.Happstack.TestServer
                     Imprevu.Happstack.Test
    exposed: True
    buildable: True
    hs-source-dirs: src
    ghc-options: -W

Test-Suite test
    type:      detailed-0.9
    test-module:    Test
    hs-source-dirs: test
    build-depends: base,
                   Imprevu-Happstack  == 0.7.6,
                   Cabal              >= 0.22

source-repository head
  type:              git
  location:          https://github.com/cdupont/Nomyx.git
