name: Imprevu
version: 0.7.6
cabal-version: >=1.8
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: 2016 Corentin Dupont
maintainer: Corentin Dupont
stability: Experimental
synopsis: Reactive programming language based on a DSL
description: A DSL to express events
category: Language
Homepage: http://www.nomyx.net
author: Corentin Dupont
data-files:
data-dir: ""
extra-source-files: AUTHORS README

library
    build-depends: DebugTraceHelpers  == 0.12.*,
                   Boolean            == 0.2.*,
                   base               >= 4.6 && < 5,
                   containers         == 0.5.*,
                   lens               >= 4.7 && < 4.14,
                   ghc                >= 7.6 && < 7.11,
                   mtl                >= 2.1 && < 2.3,
                   old-locale         == 1.0.*,
                   random             == 1.1.*,
                   safe               == 0.3.*,
                   time               >= 1.4 && < 1.6,
                   time-recurrence    == 0.9.*,
                   monad-loops        == 0.4.*,
                   aeson,
                   stm,
                   validation,
                   semigroups
    exposed-modules: Imprevu.Events
                     Imprevu.Inputs
                     Imprevu.Messages
                     Imprevu.Variables
                     Imprevu.SysMgt
                     Imprevu.Test
                     Imprevu.Evaluation.Event
                     Imprevu.Evaluation.EventEval
                     Imprevu.Evaluation.InputEval
                     Imprevu.Evaluation.Utils
                     Control.Shortcut
    exposed: True
    buildable: True
    hs-source-dirs: src
    ghc-options: -W

Test-Suite test
    type:      detailed-0.9
    test-module:    Test
    hs-source-dirs: test
    build-depends: base,
                   Imprevu            == 0.7.6,
                   Cabal              >= 0.22

source-repository head
  type:              git
  location:          https://github.com/cdupont/Nomyx.git
