name:                Nomyx-Api 
version:             0.7.6
synopsis:            REST API for Nomyx
description:         Please see README.md
homepage:            http://www.nomyx.net
license:             BSD3 
license-file:        LICENSE
author:              Corentin Dupont
maintainer:          corentin.dupont@gmail.com
copyright:           2015 Corentin Dupont
category:            Game
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      lib
  exposed-modules:     Utils
                     , Model.Error
                     , Model.Player
                     , Model.NewPlayer
                     , Api.DefaultApi
                     , Apis
  ghc-options:         -Wall
  build-depends:       base
                     , aeson
                     , text
                     , split
                     , containers
                     , network-uri
                     , QuickCheck
                     , servant
                     , servant-client
  default-language:    Haskell2010

executable client
  hs-source-dirs:      client
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , either
                     , transformers
                     , split
                     , network-uri
                     , QuickCheck
                     , servant
                     , servant-client
                     , Nomyx-Api
  default-language:    Haskell2010

executable server
  hs-source-dirs:      server
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , warp
                     , servant-server
                     , servant-mock
                     , Nomyx-Api
  default-language:    Haskell2010
