name:                Nomyx-Api 
version:             0.7.6
synopsis:            REST API for Nomyx
description:         Please see README.md
homepage:            http://www.nomyx.net
license:             BSD3 
license-file:        LICENSE
author:              Corentin Dupont
maintainer:          corentin.dupont@gmail.com
copyright:           2015 Corentin Dupont
category:            Game
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Nomyx.Api.Utils
                     , Nomyx.Api.Model.Error
                     , Nomyx.Api.Model.Player
                     , Nomyx.Api.Model.NewPlayer
                     , Nomyx.Api.Api
                     , Nomyx.Api.Server
  ghc-options:         -Wall
  build-depends:       base
                     , aeson
                     , text
                     , split
                     , containers
                     , network-uri
                     , QuickCheck
                     , servant
                     , servant-client
                     , servant-server
                     , servant-swagger
                     , wai
                     , wai-cors
                     , swagger2
                     , Nomyx-Language
                     , Nomyx-Core
                     , warp
                     , yaml
                     , bytestring
                     , stm                    == 2.4.*
                     , mtl                    >= 2.1 && < 2.3
                     , either -any
  default-language:    Haskell2010

