name: Nomyx-Auth
version: 0.7.6
cabal-version: >=1.8
build-type: Simple
license: BSD3
license-file: LICENSE
maintainer: corentin.dupont@gmail.com
synopsis: Authentication and authorization for Nomyx
category: game
Homepage: http://www.nomyx.net
author: Corentin Dupont
data-files:
data-dir: data
extra-source-files: README.md

library
    build-depends: Nomyx-Language         == 0.7.6,
                   Nomyx-Core             == 0.7.6,
                   acid-state             >= 0.12 && < 0.15,
                   base                   >= 4.6 && < 5,
                   happstack-authenticate >= 2.1 && < 2.4,
                   happstack-server       >= 7.3 && < 7.5,
                   lens                   >= 4.7 && < 4.15,
                   mtl                    >= 2.1 && < 2.3,
                   stm                    == 2.4.*,
                   text                   >= 1.1 && < 1.3,
                   web-routes             == 0.27.*
    buildable: True
    extensions: CPP
    hs-source-dirs: src
    exposed-modules:Nomyx.Auth
    other-modules: Nomyx.Auth.Types
                   Nomyx.Auth.Auth
    ghc-options: -W -threaded

source-repository head
  type:              git
  location:          https://github.com/cdupont/Nomyx.git
