name: Nomyx-Core
version: 0.7.3
cabal-version: >=1.6
build-type: Simple
license: BSD3
license-file: LICENSE
maintainer: corentin.dupont@gmail.com
synopsis: A Nomic game in haskell
category: game
Homepage: http://www.nomyx.net
author: Corentin Dupont
extra-source-files: AUTHORS README TODO
data-files: test/*.hs
            test/more/*.hs
data-dir: data
 
library 
    build-depends: Nomyx-Language         == 0.7.3,
                   DebugTraceHelpers      == 0.12.*,
                   MissingH               == 1.2.*,
                   acid-state             == 0.12.*,
                   aeson                  == 0.7.*,
                   base                   >= 4.6 && <5,
                   blaze-html             == 0.7.*,
                   blaze-markup           == 0.6.*,
                   bytestring             == 0.10.*,
                   data-lens              == 2.10.*,
                   data-lens-template     == 2.1.*,
                   data-lens-fd           == 2.0.*,
                   directory              == 1.2.*,
                   either-unwrap          == 1.1.*,
                   exceptions             == 0.6.*,
                   filepath               == 1.3.*,
                   happstack-authenticate == 0.10.15,
                   hint                   == 0.4.*,
                   hint-server            == 1.4.*,
                   hscolour               == 1.20.*,
                   ixset                  == 1.0.*,
                   mime-mail              == 0.4.*,
                   mtl                    == 2.1.*,
                   deepseq                == 1.3.*,
                   network                == 2.4.*,
                   old-locale             == 1.0.*,
                   random                 == 1.0.*,
                   safe                   == 0.3.*,
                   safecopy               == 0.8.*,
                   stm                    == 2.4.*,
                   tar                    == 0.4.*,
                   temporary              == 1.1.*,
                   template-haskell       >= 2.8 && < 2.10,
                   text                   == 1.1.*,
                   time                   == 1.4.*
    if os(windows)
        Cpp-options: -DWINDOWS
    else
        build-depends: unix >= 2.6 && < 3

    extensions: CPP
    exposed: True
    buildable: True
    hs-source-dirs: src
    exposed-modules: Nomyx.Core.Types
                     Nomyx.Core.Profile
                     Nomyx.Core.Session
                     Nomyx.Core.Multi
                     Nomyx.Core.Serialize
                     Nomyx.Core.Interpret
                     Nomyx.Core.Context
                     Nomyx.Core.Quotes
                     Nomyx.Core.Mail
                     Nomyx.Core.Utils
                     Nomyx.Core.Test
                     Nomyx.Core.Engine
                     Nomyx.Core.Engine.Evaluation
                     Nomyx.Core.Engine.EventEval
                     Nomyx.Core.Engine.EvalUtils
                     Nomyx.Core.Engine.Types
                     Nomyx.Core.Engine.GameEvents
                     Nomyx.Core.Engine.Test
                     Nomyx.Core.Engine.Utils
                     Paths_Nomyx_Core
                     Data.Todo
    ghc-options: -W -threaded
 
source-repository head
  type:              git
  location:          https://github.com/cdupont/Nomyx.git
