name: Nomyx-Core
version: 0.7.6
cabal-version: >=1.8
build-type: Simple
license: BSD3
license-file: LICENSE
maintainer: corentin.dupont@gmail.com
synopsis: A Nomic game in haskell
category: game
Homepage: http://www.nomyx.net
author: Corentin Dupont
extra-source-files: AUTHORS README TODO
data-files: test/*.hs
            test/more/*.hs
data-dir: data

library
    build-depends: Nomyx-Language         == 0.7.6,
                   Nomyx-Library          == 0.7.6,
                   Imprevu                == 0.7.6,
                   DebugTraceHelpers      == 0.12.*,
                   MissingH               >= 1.3 && < 1.5,
                   acid-state             >= 0.12 && < 0.15,
                   aeson                  >= 0.7 && < 0.12,
                   base                   >= 4.6 && < 5,
                   blaze-html             >= 0.5 && < 0.9,
                   blaze-markup           == 0.7.*,
                   bytestring             == 0.10.*,
                   lens                   >= 4.7 && < 4.15,
                   directory              == 1.2.*,
                   either-unwrap          == 1.1.*,
                   exceptions             == 0.8.*,
                   filepath               >= 1.3 && < 1.5,
                   hint                   >= 0.4 && < 0.7,
                   hscolour               >= 1.22 && < 1.25,
                   ixset                  == 1.0.*,
                   mime-mail              == 0.4.*,
                   mtl                    >= 2.1 && < 2.3,
                   deepseq                >= 1.3 && < 1.5,
                   network                == 2.6.*,
                   old-locale             == 1.0.*,
                   random                 >= 1.0 && < 1.2,
                   safe                   == 0.3.*,
                   safecopy               >= 0.8 && < 0.10,
                   shortcut               == 0.1,
                   stm                    == 2.4.*,
                   tar                    >= 0.4 && < 0.6,
                   temporary              == 1.2.*,
                   template-haskell       >= 2.8 && < 2.12,
                   text                   == 1.2.*,
                   time                   >= 1.4 && < 1.7,
                   yaml -any,
                   NoTrace -any,
                   hslogger,
                   hint-server            == 1.4.3,
                   HaskellNet,
                   HaskellNet-SSL
    if os(windows)
        Cpp-options: -DWINDOWS
    else
        build-depends: unix >= 2.6 && < 3

    extensions: CPP
    exposed: True
    buildable: True
    hs-source-dirs: src
    exposed-modules: Nomyx.Core.Types
                     Nomyx.Core.Profile
                     Nomyx.Core.Session
                     Nomyx.Core.Multi
                     Nomyx.Core.Serialize
                     Nomyx.Core.Quotes
                     Nomyx.Core.Mail
                     Nomyx.Core.Utils
                     Nomyx.Core.Test
                     Nomyx.Core.Engine
                     Nomyx.Core.Engine.Types
                     Nomyx.Core.Engine.Evaluation
                     Nomyx.Core.Engine.GameEvents
                     Nomyx.Core.Engine.Interpret
                     Nomyx.Core.Engine.Context
                     Nomyx.Core.Engine.Utils
                     Nomyx.Core.Engine.Test
                     Paths_Nomyx_Core
                     Data.Todo
    ghc-options: -W -threaded -DNO_INTERPRET_QUOTES
    cpp-options: -DNO_INTERPRET_QUOTES

Test-Suite test
    type:      detailed-0.9
    test-module:    Test
    hs-source-dirs: test
    build-depends: base,
                   Nomyx-Core         == 0.7.6,
                   Cabal              >= 0.22

source-repository head
  type:              git
  location:          https://github.com/cdupont/Nomyx.git
