name: Nomyx-Event
version: 0.7.6
cabal-version: >=1.6
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: 2012 Corentin Dupont
maintainer: Corentin Dupont
stability: Experimental
synopsis: Language to express events for Nomic
description: A DSL to express event in a Nomic game. See package Nomyx for a full game implementation.
category: Language
Homepage: http://www.nomyx.net
author: Corentin Dupont
data-files:
data-dir: ""
extra-source-files: AUTHORS README

library
    build-depends: DebugTraceHelpers  == 0.12.*,
                   Boolean            == 0.2.*,
                   base               >= 4.6 && < 5,
                   containers         == 0.5.*,
                   lens               >= 4.7 && < 4.14,
                   ghc                >= 7.6 && < 7.11,
                   mtl                >= 2.1 && < 2.3,
                   old-locale         == 1.0.*,
                   random             == 1.1.*,
                   safe               == 0.3.*,
                   time               >= 1.4 && < 1.6,
                   time-recurrence    == 0.9.*,
                   monad-loops        == 0.4.*,
                   aeson
    exposed-modules: Event.Nomyx.Expression
                     Event.Nomyx.Engine.EvalUtils
                     Event.Nomyx.Engine.EventEval
                     Event.Nomyx.Engine.Types
                     Event.Nomyx.Engine.Utils
                     Control.Shortcut,
                     Data.Todo
    exposed: True
    buildable: True
    hs-source-dirs: src
    ghc-options: -W

source-repository head
  type:              git
  location:          https://github.com/cdupont/Nomyx.git
