name: Nomyx-Language
version: 0.7.3
cabal-version: >=1.6
---Warning: to use "cabal sdist", this patch is needed in cabal: https://github.com/haskell/cabal/pull/1110
---This allows cabal to work with exported generated modules (Paths_Nomyx_Language)
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: 2012 Corentin Dupont
maintainer: Corentin Dupont
stability: Experimental
synopsis: Language to express rules for Nomic
description: Provide a DSL to express rules in a Nomic game. See package Nomyx for a full game implementation.
category: Language
Homepage: http://www.nomyx.net
author: Corentin Dupont

data-files: src/Language/Nomyx.hs
            src/Language/Nomyx/Examples.hs
            src/Language/Nomyx/Expression.hs
            src/Language/Nomyx/Rules.hs
            src/Language/Nomyx/Inputs.hs
            src/Language/Nomyx/Outputs.hs
            src/Language/Nomyx/Variables.hs
            src/Language/Nomyx/Events.hs
            src/Language/Nomyx/Players.hs
            src/Language/Nomyx/Vote.hs
            
data-dir: ""
extra-source-files: AUTHORS README
 
library
    build-depends: DebugTraceHelpers  == 0.12.*,
                   Boolean            == 0.2.*,
                   base               >= 4.6 && <= 5,
                   containers         == 0.5.*,
                   data-lens          == 2.10.*,
                   data-lens-template == 2.1.*,
                   data-lens-fd       == 2.0.*,
                   ghc                >= 7.6 && <= 7.10,
                   mtl                == 2.1.*,
                   old-locale         == 1.0.*,
                   random             == 1.0.*,
                   safe               == 0.3.*,
                   time               == 1.4.*,
                   time-recurrence    == 0.9.*
    exposed-modules: Language.Nomyx
                     Language.Nomyx.Expression
                     Language.Nomyx.Examples
                     Language.Nomyx.Variables
                     Language.Nomyx.Events
                     Language.Nomyx.Inputs
                     Language.Nomyx.Outputs
                     Language.Nomyx.Players
                     Language.Nomyx.Rules
                     Language.Nomyx.Vote
                     Paths_Nomyx_Language
                     Control.Shortcut
    exposed: True
    buildable: True
    hs-source-dirs: src
    ghc-options: -W
 
source-repository head
  type:              git
  location:          https://github.com/cdupont/Nomyx.git

