name: Nomyx-Language
version: 0.7.6
cabal-version: >=1.6
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: 2012 Corentin Dupont
maintainer: Corentin Dupont
stability: Experimental
synopsis: Language to express rules for Nomic
description: A DSL to express rules in a Nomic game. See package Nomyx for a full game implementation.
category: Language
Homepage: http://www.nomyx.net
author: Corentin Dupont

data-files: src/Language/Nomyx.hs
            src/Language/Nomyx/Expression.hs
            src/Language/Nomyx/Rules.hs
            src/Language/Nomyx/Inputs.hs
            src/Language/Nomyx/Outputs.hs
            src/Language/Nomyx/Variables.hs
            src/Language/Nomyx/Events.hs
            src/Language/Nomyx/Messages.hs
            src/Language/Nomyx/Players.hs
data-dir: ""
extra-source-files: AUTHORS README

library
    build-depends: DebugTraceHelpers  == 0.12.*,
                   Boolean            == 0.2.*,
                   base               >= 4.6 && < 5,
                   containers         == 0.5.*,
                   lens               >= 4.7 && < 4.14,
                   ghc                >= 7.6 && < 7.11,
                   mtl                >= 2.1 && < 2.3,
                   old-locale         == 1.0.*,
                   random             == 1.1.*,
                   safe               == 0.3.*,
                   time               >= 1.4 && < 1.6,
                   time-recurrence    == 0.9.*,
                   monad-loops        == 0.4.*
    exposed-modules: Language.Nomyx
                     Language.Nomyx.Expression
                     Language.Nomyx.Variables
                     Language.Nomyx.Events
                     Language.Nomyx.Messages
                     Language.Nomyx.Inputs
                     Language.Nomyx.Outputs
                     Language.Nomyx.Players
                     Language.Nomyx.Rules
                     Paths_Nomyx_Language
                     Control.Shortcut
    exposed: True
    buildable: True
    hs-source-dirs: src
    ghc-options: -W

source-repository head
  type:              git
  location:          https://github.com/cdupont/Nomyx.git
