name: Nomyx-Language
version: 0.7.6
cabal-version: >=1.8
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: 2012 Corentin Dupont
maintainer: Corentin Dupont
stability: Experimental
synopsis: Language to express rules for Nomic
description: A DSL to express rules in a Nomic game. See package Nomyx for a full game implementation.
category: Language
Homepage: http://www.nomyx.net
author: Corentin Dupont

data-files: src/Nomyx/Language.hs
            src/Nomyx/Language/Types.hs
            src/Nomyx/Language/Rules.hs
            src/Nomyx/Language/Inputs.hs
            src/Nomyx/Language/Outputs.hs
            src/Nomyx/Language/Variables.hs
            src/Nomyx/Language/Events.hs
            src/Nomyx/Language/Messages.hs
            src/Nomyx/Language/Players.hs
data-dir: .
extra-source-files: AUTHORS README

library
    build-depends: DebugTraceHelpers  == 0.12.*,
                   Boolean            == 0.2.*,
                   base               >= 4.6 && < 5,
                   containers         == 0.5.*,
                   lens               >= 4.7 && < 4.14,
                   ghc                >= 7.6 && < 7.11,
                   mtl                >= 2.1 && < 2.3,
                   old-locale         == 1.0.*,
                   random             == 1.1.*,
                   safe               == 0.3.*,
                   time               >= 1.4 && < 1.6,
                   time-recurrence    == 0.9.*,
                   monad-loops        == 0.4.*,
                   Imprevu,
                   shortcut
    exposed-modules: Nomyx.Language
                     Nomyx.Language.Types
                     Nomyx.Language.Inputs
                     Nomyx.Language.Outputs
                     Nomyx.Language.Players
                     Nomyx.Language.Rules
                     Nomyx.Language.Messages
                     Nomyx.Language.Events
                     Nomyx.Language.Variables
                     Paths_Nomyx_Language
    exposed: True
    buildable: True
    hs-source-dirs: src
    ghc-options: -W

source-repository head
  type:              git
  location:          https://github.com/cdupont/Nomyx.git

